manifests/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    # метка пригодится, когда будем писать NetworkPolicy для этой зоны
    zone: registry
